# python-backend-course-project

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.cfg
HW-4/: Choosing a DBMS.md
app/: main.py  routers.py  unit_tests_old.py
app/database/: db.py
app/posts/: post_logic.py
app/routers/: posts.py  posts_router.py  users.py  users_router.py
app/tests/: integrate_tests.py  unit_tests.py
app/users/: user_logic.py
grpc_homework/: README.md
grpc_homework/app/: logic.py  main.py
grpc_homework/app/templates/: feedpage.html
grpc_homework/protobufs/: tematic_feed.proto
grpc_homework/tematic_feed/: dummy_database.py  server.py  service.py  tematic_feed_pb2.py  tematic_feed_pb2_grpc.py
grpc_homework/tests/: tematic_feed_test.py
tests/: unit_tests.py
